--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,13 +26,13 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 apply plugin:  'com.google.gms.google-services'
 
-plugins {
-    id 'com.android.application'
-
-//    Add the Google services Gradle plugin
-    id 'com.google.gms.google-services'
-
-}
+//plugins {
+//    id 'com.android.application'
+//
+////    Add the Google services Gradle plugin
+//    id 'com.google.gms.google-services'
+//
+//}
 android {
     compileSdkVersion flutter.compileSdkVersion
 
@@ -52,7 +52,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.flash_chat"
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 19
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
