--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   animated_text_kit: ^4.2.1
+  firebase_core: ^2.4.0
+  firebase_auth: ^4.2.3
+  cloud_firestore: ^4.3.0
 
 dev_dependencies:
   flutter_test:
