--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   firebase_auth: ^4.2.3
   cloud_firestore: ^4.3.0
   modal_progress_hud_nsn: ^0.3.0
+  flutter_form_builder: ^7.1.1
+  form_builder_validators: ^8.1.0
+  form_builder_extra_fields: ^7.1.0
 
 dev_dependencies:
   flutter_test:
